--- a/_posts/2014-10-09-new-messi.md
+++ b/_posts/2014-10-09-new-messi.md
@@ -1,13 +1,15 @@
 ---
-layout: post
-title: "The New Lionel Messi"
-description:
-category: sports
-tags: [Messi, football, Barcelona, MSN]
-imagefeature: picture-2.jpg
-comments: true
-share: true
+layout: blog
+title: Beyond good and evil
+category: blog
+tags: [[Messi, football, Barcelona, MSN]  
+summary: The best just got better.
+image: /images/blog/Leo.jpg
 ---
+
+<figure>
+<a href="{{ site.url }}/images/Leo.jpg"><img src="{{ site.url }}/images/Leo.jpg"></a>
+</figure>
 
 The name of the legendary Lionel Messi is unheard by none. The little magician has won everything there is to win in club football and is exceptional on the individual front as well. His achievements include 3 UEFA Champions League titles (UCL), 6 LaLiga titles, 3 Golden Boots, 4 Ballon D'ORs (all four of which he won in a row) to name a few. Setting new records everytime he sets foot on the pitch. His goalscoring exploits include 50 goals in a single Liga campaign, 68 goals in all of the UCL campaigns combined and his remarkable record of 2012 of 91 goals in a calendar year. 
 
