--- a/_posts/2014-10-09-post7.md
+++ b/_posts/2014-10-09-post7.md
@@ -2,7 +2,7 @@
 layout: blog
 title: Beyond good and evil
 category: blog
-tags: [[Messi, football, Barcelona, MSN]  
+tags: [Messi, football, Barcelona, MSN]  
 summary: The best just got better.
 image: /images/blog/Leo.jpg
 ---
