--- a/_posts/2014-10-09-post7.md
+++ b/_posts/2014-10-09-post7.md
@@ -1,6 +1,6 @@
 ---
 layout: blog
-title: Beyond good and evil
+title: The New Lionel Messi
 category: blog
 tags: [Messi, football, Barcelona, MSN]  
 summary: The best just got better.
